--- a/common/lib/xmodule/xmodule/js/fixtures/videoalpha.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/videoalpha.html
@@ -1,7 +1,9 @@
 <div class="course-content">
   <div id="video_example">
     <div id="example">
-      <div id="video_id" class="video"
+      <div
+        id="video_id"
+        class="video"
         data-streams="0.75:slowerSpeedYoutubeId,1.0:normalSpeedYoutubeId"
         data-show-captions="true"
         data-start=""
